# barqrcode

./: entry-points.json  env.sample  main.py  pyproject.toml  requirements.txt
src/: main.py
