[project]
name = "BarQRCodeExtractor"
version = "0.1.0"
authors = [{ name = "Charles Kim", email = "hyungsoo.kim@uipath.com" }]
description = "Extract QRCode and Barcode from image file in storage bucket"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zxing-cpp==2.3.0",
    "pillow==12.0.0",
    "numpy==2.2.6",
    "uipath==2.1.183"
]